changes conditions page

--- a/conditions.html
+++ b/conditions.html
@@ -51,34 +51,56 @@
 			</div>
 		</div>
 		<div class="main-section__right">
-			<p class="main-section__subtext">
-				Условия акции
-			</p>
-			<hr>
-			<p class="main-section__infoParagraph">
-				Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст также известен как текст-заполнитель или же текст-наполнитель. 
-			</p>
-			<ul class="main-section__conditionsList">
-				<li class="main-section__condition">Закупить товара на 240.000 за 2 месяца</li>
-				<li class="main-section__condition">Сумма единоразового закупа не должна составлять минимум 60.000 тг</li>
-				<li class="main-section__condition">Участвуй в розыгрыше купона на сумму единоразового закупа</li>
-			</ul>
-			<div class="main-section__planInfo">
-				<div class="main-section__planInfo__element">
-					<p class="main-section__planElement__text">
-						Единоразовый закуп:
-					</p>
-					<p class="main-section__planElement__count">
-						60.000 тг
-					</p>
+			<div class="main-section__condtionElement">
+				<p class="main-section__subtext">
+					Условия акции
+				</p>
+				<hr>
+				<p class="main-section__infoParagraph">
+					Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст также известен как текст-заполнитель или же текст-наполнитель. 
+				</p>
+				<ul class="main-section__conditionsList">
+					<li class="main-section__condition">Закупить товара на 240.000 за 2 месяца</li>
+					<li class="main-section__condition">Сумма единоразового закупа не должна составлять минимум 60.000 тг</li>
+					<li class="main-section__condition">Участвуй в розыгрыше купона на сумму единоразового закупа</li>
+				</ul>
+				<div class="main-section__planInfo">
+					<div class="main-section__planInfo__element">
+						<p class="main-section__planElement__text">
+							Единоразовый закуп:
+						</p>
+						<p class="main-section__planElement__count">
+							60.000 тг
+						</p>
+					</div>
+					<div class="main-section__planInfo__element">
+						<p class="main-section__planElement__text">
+							Общий план:
+						</p>
+						<p class="main-section__planElement__count">
+							240.000 тг
+						</p>
+					</div>
 				</div>
-				<div class="main-section__planInfo__element">
-					<p class="main-section__planElement__text">
-						Общий план:
-					</p>
-					<p class="main-section__planElement__count">
-						240.000 тг
-					</p>
+				<div class="main-section__planTime">
+					Период проведения акции: <span class="main-section__planTime_self">2 мая 2016 - 2 июля 2016</span>
+				</div>
+			</div>
+			<div class="main-section__condtionElement">
+				<p class="main-section__subtext">
+					Дополнительная акция
+				</p>
+				<hr>
+				<p class="main-section__infoParagraph">
+					Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст также известен как текст-заполнитель или же текст-наполнитель. 
+				</p>
+				<ul class="main-section__conditionsList">
+					<li class="main-section__condition">Закупить товара на 240.000 за 2 месяца</li>
+					<li class="main-section__condition">Сумма единоразового закупа не должна составлять минимум 60.000 тг</li>
+					<li class="main-section__condition">Участвуй в розыгрыше купона на сумму единоразового закупа</li>
+				</ul>
+				<div class="main-section__planTime">
+					Период проведения акции: <span class="main-section__planTime_self">2 мая 2016 - 2 июля 2016</span>
 				</div>
 			</div>
 		</div>
