fixed main page reg-form

--- a/main.html
+++ b/main.html
@@ -22,14 +22,30 @@
 			<section class="main-section2">
 				<form action="" class="reg-form">
 					<p class="reg-form__heading">Регистрация</p>
-					<input type="text" class="reg-form__input" placeholder="Номер мобильного">
-					<input type="text" class="reg-form__input" placeholder="Email">
-					<input type="text" class="reg-form__input" placeholder="Должность">
-					<input type="text" class="reg-form__input" placeholder="Пароль">
-					<input type="text" class="reg-form__input" placeholder="Промо код">
+					<label for="" class="number__label">
+						<i class="fa fa-mobile-phone"></i>
+						<input type="text" class="reg-form__input" placeholder="Номер мобильного" >
+					</label>
+					<label for="" class="number__label">
+						<i class="fa fa-envelope-o"></i>
+						<input type="text" class="reg-form__input" placeholder="Email" >
+					</label>
+					<label for="" class="number__label">
+						<i class="fa fa-child"></i>
+						<input type="text" class="reg-form__input" placeholder="Должность" >
+					</label>
+					<label for="" class="number__label">
+						<i class="fa fa-lock"></i>
+						<input type="text" class="reg-form__input" placeholder="Пароль" >
+					</label>
+					<input type="text" class="reg-form__input reg-form__input__promo" placeholder="Промо код" >
 					<button class="reg-form__button">
 						Войти
 					</button>
+					<div class="reg-form__change">
+						<p class = "reg-form__change__p">Уже были на нашем сайте?</p>
+						<button class = "reg-form__change__button">Войти</button>
+					</div>
 				</form>
 			</section>
 		</div>
