fixed header, fonts, colors, table in profile

--- a/plan.html
+++ b/plan.html
@@ -26,13 +26,13 @@
 					</span>
 				</p>
 				<a href="" class = "main-section__leftLink"><i class="fa fa-cubes"></i>Личный кабинет</a>
-				<a href="" class = "main-section__leftLink main-section__leftLinkActive"><i class ="fa fa-user"></i>Мой профиль</a>
+				<a href="" class = "main-section__leftLink"><i class ="fa fa-user"></i>Мой профиль</a>
 				<a href="" class = "main-section__leftLink"><i class = "fa fa-align-left"></i>Условия акции</a>
 				<a href="" class = "main-section__leftLink"><i class = "fa fa-refresh"></i>Обмен Бонусов</a>
 			</div>
 			<div class="main-section__leftInfoCode">
 				<p class="main-section__activationText">
-					Активация
+					Активация кода: 
 				</p>
 				<input type="text" class="main-section__inputActivate" placeholder="XXX-XXX">
 				<button class="main-section__buttonActivate">
