added simple js modal

--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
         <form action="" class="reg-form">
           <p class="reg-form__heading">Войти</p>
           <div class="reg-form__login__sc">
-            <button class = "reg-form__change__button reg-form__tw">Через<i class = "fa fa-twitter"></i></button>
+            <button class = "reg-form__change__button reg-form__tw">Через<i class = "fa fa-vk"></i></button>
             <button class = "reg-form__change__button reg-form__fb">Через<i class = "fa fa-facebook"></i></button>
           </div>
           <h4>или</h4>
@@ -33,11 +33,14 @@
           </label>
           <label for="" class="number__label">
             <i class="fa fa-lock"></i>
-            <input type="text" class="reg-form__input" placeholder="Пароль" >
+            <input type="password" class="reg-form__input reg-form__inputpass" placeholder="Пароль" >
           </label>
           <button class="reg-form__button">
             Войти
           </button>
+          <p class="forgot__password">
+            Восстановить пароль или нет пароля
+          </p>
           <div class="reg-form__change">
             <p class = "reg-form__change__p">Впервые на нашем сайте?</p>
             <button class = "reg-form__change__button">Регистрация</button>
