fixed with perfect pixel, added button to switch type text/pass

--- a/plan.html
+++ b/plan.html
@@ -88,7 +88,7 @@
 					<span>План</span>
 				</div>
 				<progress></progress>
-				<div class="main-section__planProgressBar__distribution">
+				<div class="main-section__planProgressBar__distribution distrnumbers">
 					<span>0</span>
 					<span>10</span>
 					<span>50</span>
@@ -105,8 +105,8 @@
 			<table>
 			  <tr>
 			    <th class = "table__purple">Код</th>
-			    <th class = "table__green">Сумма заказа</th>
-			    <th class = "table__deeppurple">Начисленные баллы</th>
+			    <th class = "table__green">Сумма<br>заказа</th>
+			    <th class = "table__deeppurple">Начисленные<br>баллы</th>
 			    <th class = "table__blue">Полученные мобильные ед.</th>
 			  </tr>
 			  <tr>
