--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
   <title>Главная</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="font-awesome/css/font-awesome.css">
+  <script src = "js/app.js"></script>
 </head>
 <body class="body">
   <header class="header">
@@ -32,8 +33,10 @@
             <input type="text" class="reg-form__input" placeholder="Номер мобильного" >
           </label>
           <label for="" class="number__label">
+            <span class="number__label__changer" id="changeIcon">
+            </span>
             <i class="fa fa-lock"></i>
-            <input type="password" class="reg-form__input reg-form__inputpass" placeholder="Пароль" >
+            <input type="password" class="reg-form__input reg-form__inputpass" placeholder="Пароль" id="passInput">
           </label>
           <button class="reg-form__button">
             Войти
